--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -10,7 +10,7 @@
 
         img {
             width: 100%;
-            height: 321px;
+            height: 350px;
         }
 
 
@@ -31,7 +31,7 @@
 
             .content {
                 p{
-                    font-size: 16px;
+                    font-size: 14.5px;
                     line-height: 24px;
                 }
                 
@@ -46,7 +46,44 @@
                 letter-spacing: 0.09em;
                 position: absolute;
                 top: 50px;
-                right: -20px;
+                right: -5px;
+            }
+        }
+    }
+}
+
+
+@media(min-width: 420px) {
+    .about {
+
+        .body{
+
+            img {
+                height: 500px;
+            }
+        }
+    }
+}
+
+@media(min-width: 550px) {
+    .about {
+
+        .body{
+
+            img {
+                height: 600px;
+            }
+        }
+    }
+}
+
+@media(min-width: 642px) {
+    .about {
+
+        .body{
+
+            img {
+                height: 700px;
             }
         }
     }
@@ -100,6 +137,12 @@
                     h3 {
                         font-size: 35px;
                     }
+                }
+                .content {
+                    p{
+                        font-size: 16px;
+                    }
+                    
                 }
                
             }
