--- a/sass/sections/_reviews.scss
+++ b/sass/sections/_reviews.scss
@@ -61,7 +61,7 @@
 
             h2{
                 position: absolute;
-                top: 30px;
+                top: 40px;
                 left: -10px;
                 font-weight: 600;
                 font-size: 12px;
@@ -142,7 +142,7 @@
                 h2{
                     font-size: 27px;
                     line-height: 48px;
-                    top: 40px;
+                    top: 60px;
                 }
             }
         
@@ -188,7 +188,7 @@
     
                 h2{
                     font-size: 32px;
-                    top: 50px;
+                    top: 80px;
                 }
             }
         
